<resources>
    <string name="app_name">ALPS</string>

    <string name="action_connect_bt">Connect bluetooth</string>
    <string name="action_find_device">Pair new device</string>
    <string name="action_load_image">Open image</string>
    <string name="preview_tab">Preview</string>
    <string name="settings_tab">Settings</string>
    <string name="loop_image">Loop image</string>
    <string name="extra_time_between_columns">Extra delay</string>
    <string name="play">Play</string>
    <string name="image_preview">Image preview</string>
    <string name="stop">Stop</string>
    <string name="not_connected">Not connected</string>
    <string name="gallery_tab">Gallery</string>
    <string name="number_of_pixels">Number of pixels</string>
    <string name="brightness">Brightness</string>
    <string name="no_image">no image loaded</string>
    <string name="bluetooth_error">bluetooth connection error</string>
    <string name="write_text">Write text</string>
    <string name="color_picker_title">Color picker</string>
    <string name="action_fill_color">Fill color</string>
    <string name="red">Red:</string>
    <string name="blue">Blue:</string>
    <string name="html_code">HTML Code:</string>
    <string name="green">Green:</string>
    <string name="title_activity_custom_text">Custom text</string>
    <string name="ok">OK</string>
    <string name="text_color">Text color</string>
    <string name="background_color">Background</string>
    <string name="preview">Preview:</string>
    <string name="your_text_here">Edit your text here</string>
    <string name="width">Width</string>
    <string name="upload">Upload</string>
    <string name="action_reshow_settings">Replay settings</string>
    <string name="reshow_settings_title">Replay settings</string>
    <string name="about">About</string>
    <string name="about_title">ALPS (Another Light Painting Stick)</string>
    <string name="about_text">
        Copyright © 2020-2021 Lorenzo Bossi
        \n\n
        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.
        \n\n
        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.
        \n\n
        You should have received a copy of the GNU General Public License
        along with this program.  If not, see
        <a href="https://www.gnu.org/licenses/">https://www.gnu.org/licenses/</a>.
        \n\n
        For more information check the project
        <a href="https://github.com/Lorentz83/alps">website</a>.
    </string>
    <string name="action_edit_image">Edit...</string>
    <string name="title_activity_edit_image">Edit image</string>
    <string name="anti_aliasing">Anti aliasing</string>
    <string name="use_bilinear_filter">Use bilinear filter</string>
</resources>
