<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.github.lorentz83.alps.MainActivity">
    <item
        android:id="@+id/action_find_device"
        android:orderInCategory="100"
        android:title="@string/action_find_device"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_connect_bt"
        android:orderInCategory="100"
        android:title="@string/action_connect_bt"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_load_image"
        android:orderInCategory="100"
        android:title="@string/action_load_image"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
