<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/number_of_pixels"
            android:labelFor="@+id/num_of_pixels"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/num_of_pixels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="textEnd"
            android:importantForAutofill="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/brightness_label"
            android:labelFor="@+id/brightness"
            android:text="@string/brightness"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <SeekBar
            android:id="@+id/brightness"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginBottom="5dp"
        android:background="?android:attr/listDivider" />

    <Switch
        android:id="@+id/loop_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loop_image" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@+id/extra_timeout"
            android:text="@string/extra_time_between_columns"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <NumberPicker
            android:id="@+id/extra_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/width_label"
            android:labelFor="@+id/width"
            android:text="@string/width"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <SeekBar
            android:id="@+id/width"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Switch
        android:id="@+id/anti_alias_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anti_aliasing" />

    <Switch
        android:id="@+id/bilinear_filter_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_bilinear_filter" />

</LinearLayout>