<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    android:padding="5dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center|end"
            android:text="@string/brightness" />

        <SeekBar
            android:id="@+id/seek_bar_red"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:max="255"
            android:progress="0" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center|end"
            android:labelFor="@+id/loop_switch"
            android:text="@string/loop_image" />

        <Switch
            android:id="@+id/loop_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center|end"
            android:labelFor="@+id/extra_timeout"
            android:text="@string/extra_time_between_columns" />

        <NumberPicker
            android:id="@+id/extra_timeout"
            android:layout_width="wrap_content"
            android:gravity="center|end"
            android:layout_height="wrap_content"/>

    </TableRow>
</TableLayout>
